--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <name>DiscordConnect</name>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -66,6 +66,18 @@
           <artifactId>spigot-api</artifactId>
           <version>1.12.2-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/net.dv8tion/JDA -->
+      <dependency>
+          <groupId>net.dv8tion</groupId>
+          <artifactId>JDA</artifactId>
+          <version>5.0.0-beta.22</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>club.minnced</groupId>
+                  <artifactId>opus-java</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
   </dependencies>
 </project>
